samples/_failures_safe/1761393877_b93cd7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0591a1cc.c: In function ‘main’:
./samples/SAFE/__tmp_0591a1cc.c:165:9: error: expected declaration or statement at end of input
  165 |         if (input_buffer[0] == 'q') {
      |         ^~
./samples/SAFE/__tmp_0591a1cc.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0591a1cc.c:165:9: error: expected declaration or statement at end of input
